[package]
name = "rangefs"
version = "0.4.1"
edition = "2021"
authors = ["DCsunset"]
description = "A fuse-based filesystem to map ranges in file to individual files."
readme = "README.md"
repository = "https://github.com/DCsunset/rangefs"
license = "AGPL-3.0"
keywords = ["fs", "fuse", "range", "file"]
categories = ["filesystem", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
fuser = { version = "0.14", default-features = false }
libc = "0.2"
log = "0.4"
env_logger = "0.9"
itertools = "0.12"
daemonize = "0.5"
anyhow = "1.0"
